--- a/src/DooT/appsettings.json
+++ b/src/DooT/appsettings.json
@@ -10,6 +10,7 @@
     }
   },
   "AI": {
+    "ApiKey": "your-api-key",
     "BaseUrl": "https://api.openai.com/v1/chat/completions",
     "ModelId": "gpt-3.5-turbo"
   }
